--- a/Natural.Facade.WebClient/wwwroot/index.html
+++ b/Natural.Facade.WebClient/wwwroot/index.html
@@ -21,6 +21,13 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/Blazor.Extensions.Canvas/blazor.extensions.canvas.js"></script>
+    <script>
+        function createImageFromUrl(url, callback) {
+            const image = new Image();
+            image.src = url;
+            return image;
+        }
+    </script>
 </body>
 
 </html>
